# SpaceShipArchitect

./: .gitmodules  CMakeLists.txt  Doxyfile.in  config.h.in
include/: defines.h  gltools.h  resourcecache.h  resourceloader.h  utils.h
libs/: CMakeLists.txt
libs/SOIL/: CMakeLists.txt
resources/shader/: example.frag  example.prog  example.vert
src/: gltools.cpp  main.cpp  resourceloader.cpp  utils.cpp
